test/1.4/errors/T_EINVOVER.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

// This is not an error in DML 1.2

template a {
    /// ERROR EINVOVER
    param p = 5;
}

port p {
    is a;
    /// ERROR EINVOVER
    param p default 3;
}

// Same goes for imports
/// ERROR EINVOVER EINVOVER.dml
import "EINVOVER.dml";
port imp {
    /// ERROR EINVOVER
    param p default 1;
}
